# architectures

./: Makefile  README.md  pyproject.toml
architectures/: main.ipynb  main.py
