[tool.poetry]
name = "architectures"
version = "0.1.0"
description = ""
authors = ["orshemtov <orshemtovq@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
diagrams = "^0.23.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
